# rust-axum-starter

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/db/: mod.rs
src/handlers/: v1.rs  v2.rs
src/models/: user.rs
src/routes/: mod.rs  v1.rs  v2.rs
